--- a/assets/infografico/index.html
+++ b/assets/infografico/index.html
@@ -139,11 +139,11 @@
     <a href="#openModalCorre" title="Corredor" style="position: absolute; left: 57.44%; top: 42.16%; width: 7.15%; height: 18.66%; z-index: 2;"></a>
     <a href="#openModalAlong" title="" style="position: absolute; left: 51.59%; top: 18.25%; width: 8.93%; height: 15.26%; z-index: 2;"></a>
     <a href="#openModalInfo" title="Informações" style="position: absolute; left: 90%; top: 3.5%; width: 50px; height: 50px; z-index: 2;"><img src="assets/imgs/info.png" style="width: 100%; height: 100%"></a>
-    <a href="https://www.instagram.com/movimento.ufc/" title="Movimento" style="position: absolute; left: 64.96%; top: 65.77%; width: 7.15%; height: 12.58%; z-index: 2; vertical-align:center;"></a>
-    <a href="http://www.ufc.br/" title="UFC" style="position: absolute; left: 57.39%; top: 74.43%; width: 7%; height: 14.95%; z-index: 2;"></a>
-    <a href="https://smd.ufc.br/pt/" title="SMD" style="position: absolute; left: 49.09%; top: 78.76%; width: 7.21%; height: 14.95%; z-index: 2;"></a>
+    <a href="" title="Movimento" style="position: absolute; left: 64.96%; top: 65.77%; width: 7.15%; height: 12.58%; z-index: 2; vertical-align:center;"></a>
+    <a href="" title="UFC" style="position: absolute; left: 57.39%; top: 74.43%; width: 7%; height: 14.95%; z-index: 2;"></a>
+    <a href="" title="SMD" style="position: absolute; left: 49.09%; top: 78.76%; width: 7.21%; height: 14.95%; z-index: 2;"></a>
     <a href="#openModalBasquete" title="" style="position: absolute; left: 41.04%; top: 42.47%; width: 9.4%; height: 18.56%; z-index: 2;"></a>
-    <a href="https://defisio.ufc.br/" style="position: absolute; left: 72.74%; top: 52.16%; width: 6.42%; height: 11.86%; z-index: 2;"></a>
+    <a href="" style="position: absolute; left: 72.74%; top: 52.16%; width: 6.42%; height: 11.86%; z-index: 2;"></a>
     <!-- PopUps -->
 
     <div id="openModalInicio" class="modalDialog">
